Trying openshift